# rlc

./: .gitignore  PLAN.md  README.md  cli_contract.toml  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
rlc/: app.py  config.py  main.py  state.py
rlc/player/: __init__.py  backend.py  ffplay_backend.py  queue.py
rlc/ui/: __init__.py  curses_app.py  keymap.py  theme.py  views.py  widgets.py
rlc/util/: __init__.py  logging.py  paths.py
rlc/visualizer/: __init__.py  analyzer.py  ascii_engine.py  frames.py
tests/: test_cli_contract.py  test_command_bar.py  test_config.py  test_install_contract.py  test_keymap.py  test_playlists.py  test_queue.py  test_search.py  test_shortcuts.py  test_state.py  test_theme.py  test_youtube.py
