[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlc"
version = "0.1.0"
description = "Curses-based terminal music player using ffmpeg tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
rlc = "rlc.main:main"
