[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlc"
dynamic = ["version"]
description = "Curses-based terminal music player using ffmpeg tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mutagen>=1.47.0",
  "rgw-cli-contract==0.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
rlc = "rlc.main:main"

[tool.setuptools]
py-modules = ["_version"]

[tool.setuptools.packages.find]
include = ["rlc*"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
